# lrge

./: .dockerignore  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  Cargo.toml  Cross.toml  Dockerfile  README.md  cog.toml  justfile  release-please-config.json
.github/: dependabot.yml
.github/workflows/: check.yml  docker.yml  publish.yml  release-please.yml  release.yml  scheduled.yml  test.yml
_release-intermediates/package/lrge-0.2.1-x86_64-unknown-linux-gnu/: CHANGELOG.md  LICENSE  README.md  lrge
install/: install.sh
liblrge/: CHANGELOG.md  Cargo.toml  README.md
liblrge/src/: ava.rs  error.rs  estimate.rs  io.rs  lib.rs  minimap2.rs  twoset.rs
liblrge/src/ava/: builder.rs
liblrge/src/minimap2/: aligner.rs  mapping.rs  preset.rs  thread_buf.rs
liblrge/src/twoset/: builder.rs
lrge/: CHANGELOG.md  Cargo.toml
lrge/src/: cli.rs  main.rs  utils.rs
lrge/tests/: alignment.rs
lrge/tests/data/: toy.bam
paper/: README.md  lightning talk.pptx
paper/config/: bacteria_lr.filtered.tsv  bacteria_lr_runs.filtered.tsv  bacteria_lr_runs.tsv  bad_quality.acc.ids  config.yaml  get_datasets.md  low_depth.acc.ids  no_ftp_url.acc.ids  not_long_reads.ids
paper/manuscript/: OUP waiver application form.docx
paper/manuscript/Final/: manuscript.tex  reference.bib
paper/manuscript/R2/: BIOINF-2024-2722.R1 LRGE Round 2 Reviewer comments.docx  manuscript.tex  reference.bib
paper/manuscript/R3/: manuscript.tex
paper/notebooks/: eda.ipynb  impact_of_read_len_and_qual_on_accuracy.ipynb  notepad.ipynb  per_read_estimates.ipynb  results.ipynb
paper/results/: genomescope_estimates.csv  lrge_2set_estimates.csv  lrge_ava_estimates.csv  mash_estimates.csv
paper/results/estimates/: estimates.tsv
paper/results/tables/: method_absolute_relative_error.tsv  method_cpu_memory.tsv  platform_relative_error.tsv
paper/scripts/: combine_genomescope_estimates.py  combine_lrge-ava_estimates.py  combine_lrge_estimates.py  combine_mash_estimates.py  extract_per_read_estimates.py  fetch_run_accessions.py  generate_overlaps.sh  genome_size1.R  genome_size2.R  genome_size_analysis.R  genomescope_estimates.py  get_datasets.md  get_library_info.py  is_sorted.py  mash_estimates.py  param_exploration-ava.py  param_exploration.py  rename_dups.sh  replace_lrge_estimates.py  run_genome_size.sh  run_genome_size2.sh  submit_slurm.sh
paper/workflow/: Snakefile
paper/workflow/envs/: combine.yaml  download.yaml  genomescope.yaml  lrge.yaml  mash.yaml
paper/workflow/rules/: download.smk  estimate.smk
paper/workflow/scripts/: combine.py  download.sh  genomescope.py  lrge-2set.py  lrge-ava.py
src/: ava.rs  cli.rs  main.rs  twoset.rs
