[workspace]
members = [
    "lrge",
    "liblrge",
]
resolver = "2"

[workspace.package]
description = "Genome size estimation from long read overlaps"
authors = ["Michael Hall <michael@mbh.sh>"]
edition = "2021"
repository = "https://github.com/mbhall88/lrge"
homepage = "https://github.com/mbhall88/lrge"
readme = "README.md"
keywords = ["bioinformatics", "long-reads", "overlaps", "estimation", "genome-size"]
license-file = "LICENSE"
exclude = ["paper/*"]
rust-version = "1.74.1"

[workspace.dependencies]
log = "0.4.22"

[profile.release]
strip = true   # https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#strip-symbols-from-binary
