[package]
name = "liblrge"
version = "0.1.0"
documentation = "https://docs.rs/liblrge"
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
license-file.workspace = true
exclude.workspace = true

[dependencies]
log.workspace = true
flate2 = { version = "1.0.34", optional = true }  # For gzip files
zstd = { version = "0.13.2", optional = true }   # For zstd files
bzip2 = { version = "0.4.4", optional = true }   # For bzip2 files
liblzma = { version = "0.3.5", optional = true } # For lzma (xz) files.

[features]
compression = ["flate2", "zstd", "bzip2", "liblzma"]  # Enable compression support
default = ["compression"]  # Enable compression by default