[package]
name = "liblrge"
version = "0.1.0"
documentation = "https://docs.rs/liblrge"
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
license-file.workspace = true
exclude.workspace = true

[dependencies]
log.workspace = true
needletail = { version = "0.6.0", default-features = false }
rand = "0.8.5"
rand_pcg = "0.3.1"

# for compression support
flate2 = { version = "1.0.34", optional = true, package = "flate2" }  # For gzip files
zstd = { version = "0.13.2", optional = true }   # For zstd files
bzip2 = { version = "0.4.4", optional = true }   # For bzip2 files
liblzma = { version = "0.3.5", optional = true, package = "liblzma" } # For lzma (xz) files.

[features]
compression = ["gzip", "zstd", "bzip2", "xz"]  # Enable compression support
default = ["compression"]  # Enable compression by default
xz = ["liblzma"]  # Alias "xz" to "liblzma" dependency
gzip = ["flate2"]  # Alias "gzip" to "flate2" dependency
