[package]
name = "liblrge"
version = "0.1.2"
documentation = "https://docs.rs/liblrge"
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
license-file.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
needletail = { version = "0.6.0", default-features = false }
rand = "0.8.5"

minimap2-sys = "0.1.20"
libc = "0.2.164"
crossbeam-channel = "0.5.13"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
csv = "1.3.1"

# for compression support
flate2 = { version = "1.0.34", optional = true, package = "flate2" }
zstd = { version = "0.13.2", optional = true }
bzip2 = { version = "0.4.4", optional = true }
liblzma = { version = "0.3.5", optional = true, package = "liblzma" }

[features]
compression = ["gzip", "zstd", "bzip2", "xz"]  # Enable compression support
default = ["compression"]  # Enable compression by default
xz = ["liblzma"]  # Alias "xz" to "liblzma" dependency
gzip = ["flate2"]  # Alias "gzip" to "flate2" dependency

[dev-dependencies]
env_logger = "0.11.5"  # for documentation tests