[package]
name = "lrge"
version = "0.1.0"
categories = ["science", "command-line-utilities"]
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
license-file.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
tempfile = "3.14.0"
liblrge = { path = "../liblrge" }