[package]
name = "lrge"
version = "0.3.0"
categories = ["science", "command-line-utilities"]
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
license-file.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
tempfile = "3.14.0"
liblrge = { path = "../liblrge", version = "0.3.0" }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
